updated trading strategies

--- a/Strategies/final_strat_1.ipynb
+++ b/Strategies/final_strat_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,36 +19,36 @@
        "End                       2024-10-11 00:00:00\n",
        "Duration                    561 days 00:00:00\n",
        "Exposure Time [%]                     99.5842\n",
-       "Equity Final [$]                 12950.568958\n",
-       "Equity Peak [$]                  13753.215777\n",
-       "Return [%]                           29.50569\n",
+       "Equity Final [$]                 11959.685385\n",
+       "Equity Peak [$]                  12377.812798\n",
+       "Return [%]                          19.596854\n",
        "Buy & Hold Return [%]                0.286131\n",
-       "Return (Ann.) [%]                   14.506222\n",
-       "Volatility (Ann.) [%]                19.18046\n",
-       "Sharpe Ratio                         0.756302\n",
-       "Sortino Ratio                        1.329183\n",
-       "Calmar Ratio                         1.019057\n",
-       "Max. Drawdown [%]                  -14.234942\n",
-       "Avg. Drawdown [%]                   -2.728265\n",
+       "Return (Ann.) [%]                    9.829256\n",
+       "Volatility (Ann.) [%]               12.194345\n",
+       "Sharpe Ratio                          0.80605\n",
+       "Sortino Ratio                        1.357474\n",
+       "Calmar Ratio                         1.059638\n",
+       "Max. Drawdown [%]                   -9.276052\n",
+       "Avg. Drawdown [%]                   -1.821305\n",
        "Max. Drawdown Duration      318 days 00:00:00\n",
        "Avg. Drawdown Duration       30 days 00:00:00\n",
-       "# Trades                                  146\n",
-       "Win Rate [%]                        53.424658\n",
+       "# Trades                                  143\n",
+       "Win Rate [%]                        53.846154\n",
        "Best Trade [%]                            2.0\n",
-       "Worst Trade [%]                          -1.0\n",
-       "Avg. Trade [%]                       0.062169\n",
+       "Worst Trade [%]                          -1.5\n",
+       "Avg. Trade [%]                       0.064256\n",
        "Max. Trade Duration          26 days 00:00:00\n",
        "Avg. Trade Duration           4 days 00:00:00\n",
-       "Profit Factor                        1.365726\n",
-       "Expectancy [%]                       0.063716\n",
-       "SQN                                  1.229607\n",
+       "Profit Factor                        1.367791\n",
+       "Expectancy [%]                       0.065901\n",
+       "SQN                                  1.270496\n",
        "_strategy                 LinearRegression...\n",
        "_equity_curve                             ...\n",
        "_trades                         Size  Entr...\n",
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,9 +191,9 @@
     "    # This would be where the forecast are done (Unless want it to be done on each candles avalailability)\n",
     "    \n",
     "    '''\n",
-    "    position_size = 0.15\n",
-    "    short_sl_multiplier =1.01 \n",
-    "    short_tp_multiplier = 0.98 \n",
+    "    position_size = 0.1\n",
+    "    short_sl_multiplier =1.015 \n",
+    "    short_tp_multiplier = 0.97 \n",
     "    long_tp_multiplier = 1.02\n",
     "    long_sl_multiplier = 0.99\n",
     "\n",
@@ -305,17 +305,6 @@
     "                'current_close': current_close\n",
     "            })\n",
     "\n",
-    "            # Define stop loss and take profit distances\n",
-    "            stop_loss_distance = 0.008  # 80 pips\n",
-    "\n",
-    "            # Long trade parameters\n",
-    "            sl_long = current_close - stop_loss_distance\n",
-    "            tp_long = max(forecast_1d, current_close + 0.016)  # TP above current close\n",
-    "\n",
-    "            # Short trade parameters\n",
-    "            sl_short = current_close + stop_loss_distance\n",
-    "            tp_short = min(forecast_1d, current_close - 0.016)  # TP below current close\n",
-    "\n",
     "            # Condition for long trade: Forecasts show upward trend\n",
     "            if   forecast_1d > current_close:\n",
     "                if not self.position.is_long:\n",
@@ -352,7 +341,7 @@
     "test_data = data.iloc[-481:]  # This assumes X_test is at the end of the dataset\n",
     "bt = Backtest(test_data, LinearRegressionStrategy, cash =10000, commission=0, margin=.05, trade_on_close=True)\n",
     "stats = bt.run()\n",
-    "# stats=  bt.optimize(position_size=[0.03, 0.05, 0.1, 0.15], maximize='Equity Final [$]')\n",
+    "# stats = bt.optimize(short_sl_multiplier=[1.01, 1.015, 1.017,1.02], long_sl_multiplier= [0.98,0.985, 0.99, 0.995], maximize='Equity Final [$]')\n",
     "\n",
     "strategy_instance = stats._strategy  # Retrieve the strategy object\n",
     "\n",
@@ -444,6 +433,13 @@
    "metadata": {},
    "source": [
     "## Strategy 1 Analysis:\n",
+    "\n",
+    "* Strategy reacts to most current trend\n",
+    "* Disadvantage:\n",
+    "    - increased trade frequency >> incures more transaction costs >> increased risk, due to increased market exposure\n",
+    "    - if transaction costs included, profitability decreases\n",
+    "\n",
+    "* A note is that the amount of paper profits realized depend also on the position size.\n",
     "\n",
     "* Not optimal because condiions won't be met due to the volatile nature of the markets\n",
     "    - as result trades being executed will not be correct\n",
