--- a/Strategies/final_strat_2.ipynb
+++ b/Strategies/final_strat_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -14,48 +14,44 @@
       "Buy signal detected.\n",
       "Sell/Short signal detected.\n",
       "Buy signal detected.\n",
-      "{}\n"
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "Sell/Short signal detected.\n",
+      "Buy signal detected.\n",
+      "3.0845633446405856\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Start                     2023-03-30 00:00:00\n",
-       "End                       2024-10-11 00:00:00\n",
-       "Duration                    561 days 00:00:00\n",
-       "Exposure Time [%]                     99.5842\n",
-       "Equity Final [$]                   17964.7272\n",
-       "Equity Peak [$]                   25864.39184\n",
-       "Return [%]                          79.647272\n",
-       "Buy & Hold Return [%]                0.286131\n",
-       "Return (Ann.) [%]                   35.923057\n",
-       "Volatility (Ann.) [%]              279.270798\n",
-       "Sharpe Ratio                         0.128632\n",
-       "Sortino Ratio                         0.43446\n",
-       "Calmar Ratio                         0.439578\n",
-       "Max. Drawdown [%]                  -81.721652\n",
-       "Avg. Drawdown [%]                  -28.403442\n",
-       "Max. Drawdown Duration      237 days 00:00:00\n",
-       "Avg. Drawdown Duration       55 days 00:00:00\n",
-       "# Trades                                    5\n",
-       "Win Rate [%]                            100.0\n",
-       "Best Trade [%]                       1.292742\n",
-       "Worst Trade [%]                      0.227989\n",
-       "Avg. Trade [%]                       0.634883\n",
-       "Max. Trade Duration         300 days 00:00:00\n",
-       "Avg. Trade Duration         112 days 00:00:00\n",
-       "Profit Factor                             NaN\n",
-       "Expectancy [%]                       0.635696\n",
-       "SQN                                  3.254876\n",
-       "_strategy                 LinearRegression...\n",
-       "_equity_curve                             ...\n",
-       "_trades                        Size  Entry...\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -190,147 +186,123 @@
     "\n",
     "################################# # Backtesting Strategy using Linear Regression #########################################\n",
     "\n",
-    "class LinearRegressionStrategy(Strategy):\n",
-    "    c = 0.001  # Adjust according to 2 * transaction_cost forecasted return\n",
-    "  \n",
-    "    def init(self):\n",
-    "        self.index = 1         # Track positions and predictions\n",
-    "        self.test_data_subset = self.data.df[features]        # Prepare test data subset with the best selected features\n",
-    "        self.lowerMove = 0\n",
+    "class MultiOutputForecastStrategy(Strategy):\n",
+    "    c = 0.00002  # Threshold based on 2 * transaction cost\n",
     "\n",
-    "        self.position_status = None \n",
+    "    short_sl_multiplier =1.02\n",
+    "    short_tp_multiplier = 0.97 \n",
+    "    long_tp_multiplier = 1.02\n",
+    "    long_sl_multiplier = 0.99\n",
+    "\n",
+    "    def init(self):\n",
+    "        self.index = 1  # Track positions and predictions\n",
+    "        self.test_data_subset = self.data.df[features]  # Subset of data with relevant features\n",
+    "        self.position_status = None  # Track whether position is long or short\n",
     "\n",
     "    def forecast_prices(self, data_window):\n",
-    "\n",
     "        \"\"\"Forecast prices for 1-day, 3-day, and 5-day horizons.\"\"\"\n",
-    "        num_features = data_window.shape[1]         # Get the number of features\n",
+    "        lagged_features = data_window.to_numpy().flatten().reshape(1, -1)  # Flatten data\n",
     "\n",
-    "        lagged_features = []         # Flatten the data with grouping by feature type\n",
+    "        X_scaled = scaler.transform(lagged_features)  # Scale features\n",
+    "        predictions = np.dot(X_scaled, weights) + bias  # Forecasts (1-day, 3-day, 5-day)\n",
+    "        return predictions[0]  # Return predictions\n",
     "\n",
-    "        for feature_idx in range(num_features):\n",
-    "            feature_lags = data_window.iloc[:, feature_idx].values             # Extract all lagged values for the current feature\n",
-    "\n",
-    "            lagged_features.extend(feature_lags)\n",
-    "\n",
-    "        X = np.array(lagged_features).reshape(1, -1)         # Convert to a NumPy array and reshape to fit the model's input (flattening)\n",
-    "\n",
-    "\n",
-    "        X_scaled = scaler.transform(X)         # Scale the flattened features using the trained scaler\n",
-    "\n",
-    "        # Forecast using the model's weights and bias\n",
-    "        predictions = np.dot(X_scaled, weights) + bias  # Shape: (1, 3)\n",
-    "\n",
-    "        return predictions[0]  #    \n",
-    "    \n",
-    "    ######### Strategy Exectution #############\n",
-    "    def validate_order(self, trade_type, order_price, sl, tp):\n",
-    "     \n",
-    "        adjust_order =  0\n",
-    "        if trade_type == 'long':\n",
-    "            adjust_order = 1\n",
-    "            if not (tp > order_price > sl):\n",
-    "                print(f\"CHECK: Long orders require: TP ({tp}) > Order ({order_price}) > SL ({sl})\")\n",
-    "                return adjust_order \n",
-    "\n",
-    "        elif trade_type == 'short':\n",
-    "            adjust_order = 2\n",
-    "            if not (tp < order_price < sl):\n",
-    "                print(f\"CHECK: Short orders require: TP ({tp}) < Order ({order_price}) < SL ({sl})\")\n",
-    "\n",
-    "                return adjust_order\n",
-    "\n",
-    "    \n",
-    "    def adjust_order_limits(self, trade_type, order_price, sl, tp):\n",
-    "        \"\"\"\n",
-    "        Adjusts SL or TP to ensure the correct relationship between TP, order price, and SL.\n",
-    "        - For long: TP > order price > SL\n",
-    "        - For short: TP < order price < SL\n",
-    "        \"\"\"\n",
-    "        if trade_type == 'long':\n",
-    "            if tp > order_price:\n",
-    "                tp  =tp \n",
-    "            elif tp < order_price:\n",
-    "                tp = order_price + 0.016  # Small buffer to meet the criteria\n",
-    "            \n",
-    "            if sl < order_price:\n",
-    "                sl =  sl\n",
-    "            elif sl > order_price:\n",
-    "                sl =  order_price - 0.008\n",
-    "          \n",
-    "        elif trade_type == 'short':\n",
-    "            if sl > order_price:\n",
-    "                sl  = sl \n",
-    "            elif sl < order_price:\n",
-    "                sl = order_price + 0.008\n",
-    "\n",
-    "            if tp < order_price:\n",
-    "                tp = tp - 0.01\n",
-    "\n",
-    "            elif tp > order_price:\n",
-    "                tp  =  order_price - 0.016\n",
-    "           \n",
-    "        return sl, tp\n",
-    "    \n",
-    "    '''\n",
-    "    iteratively called by the Backtest instance, once for each data point (data frame row), simulating the incremental availability \n",
-    "    each new full candlestick\n",
-    "    - orders are executed on the current candle's close (trade_on_close= True) \n",
-    "    - self.data loads individual candles iteratively (not a normal dataframe), but an internal object\n",
-    "    - each object should be accessed individually\n",
-    "    '''\n",
     "    def next(self):\n",
     "        if self.index >= lookback_window:\n",
-    "            \n",
     "            # Get the latest data window\n",
     "            data_window = self.test_data_subset.iloc[self.index - lookback_window + 1 : self.index + 1]\n",
     "\n",
-    "            # Forecast prices for 1-day, 3-day, and 5-day horizons\n",
+    "            # Get forecasts for 1-day, 3-day, and 5-day horizons\n",
     "            forecast_1d, forecast_3d, forecast_5d = self.forecast_prices(data_window)\n",
     "            current_close = self.data.Close[self.index]\n",
     "\n",
-    "            forecasted_return = forecast_5d- current_close\n",
+    "            # Calculate forecasted returns\n",
+    "            forecasted_return_1d = forecast_1d - current_close\n",
+    "            forecasted_return_5d = forecast_5d - current_close\n",
     "\n",
-    "            # Define stop loss and take profit distances\n",
-    "            stop_loss_distance = 0.008  # 80 pips\n",
-    "\n",
-    "            # Long trade parameters\n",
-    "            sl_long = current_close - stop_loss_distance\n",
-    "            tp_long = max(forecast_1d, current_close + 0.016)\n",
-    "\n",
-    "            # Short trade parameters\n",
-    "            sl_short = current_close + stop_loss_distance\n",
-    "            tp_short = min(forecast_1d, current_close - 0.02)\n",
-    "\n",
-    "            if forecasted_return > self.c:\n",
+    "            # Prioritize short-term forecasts but confirm with long-term trends\n",
+    "            if forecasted_return_1d > self.c and forecasted_return_5d > self.c:\n",
     "                if self.position_status != 'long':\n",
     "                    print(\"Buy signal detected.\")\n",
     "                    self.position.close()  # Close any short position\n",
-    "                    self.buy()  # Enter a long position\n",
+    "                    self.buy(size=0.1, tp=self.long_tp_multiplier * current_close, sl=self.long_sl_multiplier * current_close)  # Open long position\n",
     "                    self.position_status = 'long'\n",
     "\n",
-    "            elif forecasted_return < -self.c:\n",
+    "            elif forecasted_return_1d < -self.c and forecasted_return_5d < -self.c:\n",
     "                if self.position_status != 'short':\n",
     "                    print(\"Sell/Short signal detected.\")\n",
     "                    self.position.close()  # Close any long position\n",
-    "                    self.sell()  # Enter a short position\n",
+    "                    self.sell(size=0.1, tp=self.short_tp_multiplier * current_close, sl=self.short_sl_multiplier * current_close)  # Open short position\n",
+    "                    \n",
     "                    self.position_status = 'short'\n",
-    "           \n",
-    "        # Increment index for the next iteration\n",
+    "\n",
     "        self.index += 1\n",
+    "\n",
+    "    def profit_factor_cal(self):\n",
+    "        trades = self.closed_trades\n",
+    "\n",
+    "        gross_profit = sum(trade.pl for trade in trades if trade.pl>0)\n",
+    "        gross_loss = abs(sum(trade.pl for trade in trades if trade.pl <0))\n",
+    "\n",
+    "        profit_fact = gross_profit/gross_loss if gross_loss !=0 else float('inf')\n",
+    "        \n",
+    "        return profit_fact\n",
+    "    \n",
     "\n",
     "\n",
     "test_data = data.iloc[-481:]  # This assumes X_test is at the end of the dataset\n",
-    "bt = Backtest(test_data, LinearRegressionStrategy, cash =10000, commission=0, margin=.05, trade_on_close=True)\n",
+    "bt = Backtest(test_data, MultiOutputForecastStrategy, cash =10000, commission=0, margin=.05, trade_on_close=True)\n",
     "stats = bt.run()\n",
-    "# stats = bt.optimize(c=[x / 1000 for x in range(5, 30, 5)])\n",
-    "best_params = stats._strategy._params\n",
-    "print(best_params)\n",
+    "# stats = bt.optimize(c=[0.00005, 0.0001, 0.0002, 0.0003, 0.0004], maximize='Equity Final [$]')\n",
+    "# stats = bt.optimize(short_tp_multiplier=[0.97,0.98, 0.99], long_tp_multiplier= [1.01, 1.02, 1.03], maximize='Equity Final [$]')\n",
+    "# best_params = stats._strategy._params\n",
+    "# print(best_params)\n",
     "\n",
     "bt.plot() \n",
     "stats \n",
     "\n",
+    "strategy_instance = stats._strategy  # This accesses the strategy instance\n",
+    "profit_factor = strategy_instance.profit_factor_cal()  # Call the function to calculate profit factor\n",
+    "\n",
+    "print(profit_factor)\n",
+    "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "\n",
+    "* if lower threshold, more opportunity , high returns\n",
+    "    - instead of trying to capture the biggest move, identify small movement with certainty and trade based on them\n",
+    "    - not only that,provides more opportunity\n",
+    "    - higher win rate, higher sharpe ratio\n",
+    "* pip = 1 is the better threshold to set, maximises the returns\n",
+    "    \n",
+    "* Attempt to minimise loss, to have a higher returns\n",
+    "* Ultimately what also influences the returns is postion size: higher sizing == increase in returns, but consequently increase in risk\n",
+    "    - trade off to be made\n",
+    "* Advantage of this strategy is lower trade frequency >> selective on trades\n",
+    "    - capitalize on the best found trades\n",
+    "    - even if transaction costs included still profitable, because of the low trade frequency\n",
+    "    - able to capture upward trends easier than downward trends\n",
+    "\n",
+    "* Disadvantage:\n",
+    "    - strategy cannot capitalize on the short trades, thus has missed opportunities\n",
+    "    - attempting to mitigate this results in an increase in trade frequency, and lower returns\n",
+    "\n",
+    "\n",
+    "#Best param:\n",
+    "    - sell sl: 2% from current price\n",
+    "    - sell tp: 3% from current price\n",
+    "    - \n",
+    "\n",
+    "#NOTE:\n",
+    "* No forecast or trading strategy is perfect: don't cheat by hacking them:\n",
+    "    >> forecast >> trade >> evaluate\n"
    ]
   }
  ],
